# traditional-feature-extraction

./: .gitignore  Makefile  README.md  config.ini  environment.yml  pyproject.toml
results/: dummy_file.txt
results/alfred/: alfred_text_similarity_report.txt
results/bridge/: bridge_text_similarity_report.txt
results/rt1/: rt1_text_similarity_report.txt
results/scout/: scout_text_similarity_report.txt
results/tacoplay/: tacoplay_text_similarity_report.txt
src/traditional_feature_extraction/: inspect_alfred.py  inspect_arl_scout.py  inspect_rt1.py
src/traditional_feature_extraction/data_viz/: similarity_report.py
traditional_feature_extraction/: __main__.py
traditional_feature_extraction/archive/: tree_kernel_metric.ipynb  visualizer.py
traditional_feature_extraction/data_viz/: similarity_report.py  utils.py
traditional_feature_extraction/feature_extraction/: helper.py  preprocessing.py  utils.py
traditional_feature_extraction/notebooks/: scratchbook.ipynb
traditional_feature_extraction/similarity_measures/: nlg_metrics.py
