[project]
name = "traditional_feature_extraction"
dynamic = ["version"]
dependencies = [
    "bert_score",
    "evaluate",
    "gcsfs",
    "google-auth==2.17.0",
    "ipython",
    "jupyter",
    "nltk",
    "numpy",
    "pandas",
    "pillow",
    "python-Levenshtein",
    "rouge-score",
    "tensorflow_datasets",
    "tensorflow==2.9",
    "torch==2.1.2",
    "seaborn",
    "spacy",
    "stanza",
    "wordcloud",
    "openpyxl",
]
requires-python = "~=3.10"

[build-system]
requires = ["setuptools>=40.6.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["feature_extraction", "data_viz"]  # alternatively: `exclude = ["additional*"]`
namespaces = false

[tool.setuptools_scm]
version_scheme = "guess-next-dev"

[project.optional-dependencies]
dev = [
    "black==23.12.1",
    "pylint==3.0.3",
    "pynvim==0.5.0",
]
test = [
    "pytest==7.4.3",
]
