[project]
name = "traditional_feature_extraction"
dynamic = ["version"]
dependencies = [
    "diversity",
]
requires-python = "~=3.10"

[build-system]
requires = ["setuptools>=40.6.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["traditional_feature_extraction"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"

[project.optional-dependencies]
dev = [
    "black==23.12.1",
    "pylint==3.0.3",
    "pynvim==0.5.0",
]
test = [
    "pytest==7.4.3",
]
